# chunks

./: .gitignore  LICENSE  README.md  pyproject.toml
chunks/: __init__.py  __main__.py  csv.py  utils.py
littlechunks/: __init__.py  __main__.py  csv_splitter.py  parquet_splitter.py  utils.py
