[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "littlechunks"
version = "0.0.2"
requires-python = ">=3.11"
dependencies = [
    "pre-commit",
    "pytest",
    "coverage",
    "psutil",
    "pyarrow",
]

[tool.setuptools.packages.find]
namespaces = true
include = ["littlechunks*"]

[tool.setuptools.package-data]
"littlechunks.data" = ["*.csv"]


[project.scripts]
littlechunks = "littlechunks:main"
